--- a/public/wealthdunk.html
+++ b/public/wealthdunk.html
@@ -3,6 +3,8 @@
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="custom.css">
+		<link rel="stylesheet" type="text/css" href="alt_style.css">
 	</head>
 	<body  ng-controller="CalculationController">
 		<div id="wealth-dunk-navbar"> 
@@ -16,7 +18,7 @@
 							<span class="icon-bar"></span> 
 						</button>  -->
 						<a href="#" class="navbar-brand">
-							<img src="img/Wealthdunk_black_logo.png" width="125px" />
+							<img src="img/Wealthdunk_black_logo.png" width="250px" />
 						</a> 
 					</div> 
 					<div class="collapse navbar-collapse"> 
@@ -41,21 +43,26 @@
 		<div class="main-content container">
 			<div class="row">
 				<div class="col-md-12">
-					<h3 class="text-center font-bold">Start investing the smart way</h2>
+				<br><br><br><br><br><br>
+					<h3 class="intro_text green_text text-center font-bold ">Start investing the smart way</h2>
 				</div>
 			</div>
+			<br>
 			<div class="row">
 				<div class="col-md-12">
-					<p class="text-center text-padding-top">
+					<p class="about_text text-center text-padding-top">
 						Robo Advisors are a lower cost, transparent and hassel-free way of having your money managed by expert investers. You can start with a little &#163;1, which is then invested into a portfolio that is personally managed for you and accessible online 24/7.
 					</p>
+
+					<p class="second_text text-center text-padding-top text-padding-bottom">
+					WealthDunk's free and independet comparison service can find you a suitable investment platform in minutes.
+				</p>
 				</div>
 			</div>
 			<div class="row">
-				<p class="text-center text-padding-top text-padding-bottom">
-					WealthDunk's free and independet comparison service can find you a suitable investment platform in minutes.
-				</p>
+				
 			</div>
+			<br><br><br><br>
 		</div>
 		<div class="form-container container">
 			<div class="row">
@@ -238,7 +245,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-8">
-								<h4 class="text-center">You are here: Home</h4>
+								<h4 class="text-center">You are here: Robo Comparison Page</h4>
 							</div>
 							<div class="col-md-4">
 								<img src="img/Wealthdunk_white_logo.png" width="270" style="padding-left:40px;" />
